--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -119,12 +119,20 @@ p {
           font-size: 20px; }
 
 #mc_embed_signup {
-    /* background: #fff; */
+    background: transparent;
     false: ;
     clear: left;
     font: 14px Helvetica,Arial,sans-serif;
     width: 600px;
 }
+
+#mc_embed_signup .refferal_badge {
+
+dispaly: none;
+}
+
+
+
 #mc_embed_signup .indicates-required {
     text-align: right;
     font-size: 11px;
